--- a/vignettes/Chemical.Rmd
+++ b/vignettes/Chemical.Rmd
@@ -41,7 +41,7 @@ start_vignette("2")
 ```
 
 ```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
-if (!library(ccdR, logical.return = TRUE)){
+if (!library(ctxR, logical.return = TRUE)){
   devtools::load_all()
 }
 old_options <- options("width")
@@ -57,7 +57,7 @@ library(gridExtra)
 # Redefining the knit_print method to truncate character values to 25 characters
 # in each column and to truncate the columns in the print call to prevent 
 # wrapping tables with several columns.
-#library(ccdR)
+#library(ctxR)
 knit_print.data.table = function(x, ...) {
   y <- data.table::copy(x)
   y <- y[, lapply(.SD, function(t){
@@ -81,7 +81,7 @@ In this vignette, [CTX Chemical API](https://api-ccte.epa.gov/docs/chemical.html
 
 ::: {.noticebox data-latex=""}
 
-**NOTE:** Please see the introductory vignette for an overview of the *ccdR* package and initial set up instruction with API key storage.
+**NOTE:** Please see the introductory vignette for an overview of the *ctxR* package and initial set up instruction with API key storage.
 
 :::
 
@@ -96,7 +96,7 @@ More information on Chemicals and Chemistry Data can be found here: <https://www
 
 ## Functions
 
-Several ccdR functions are used to access the CTX Chemical API data.
+Several ctxR functions are used to access the CTX Chemical API data.
 
 ### Chemical Details Resource
 
@@ -106,13 +106,13 @@ Several ccdR functions are used to access the CTX Chemical API data.
 
 ##### By DTXSID
 
-```{r ccdR dtxsid data chemical, message=FALSE, eval=FALSE}
+```{r ctxR dtxsid data chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chemical_details(DTXSID = 'DTXSID7020182')
 ```
 
 ##### By DTXCID
 
-```{r ccdR dtxcid data chemical, message=FALSE, eval=FALSE}
+```{r ctxR dtxcid data chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chemical_details(DTXCID = 'DTXCID30182')
 ```
 
@@ -120,7 +120,7 @@ res_dt <- get_chemical_details(DTXCID = 'DTXCID30182')
 
 `get_chemical_by_property_range()` retrieves data for chemicals that have a specified property within the input range.
 
-```{r ccdR property range chemical, message=FALSE, eval=FALSE}
+```{r ctxR property range chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chemical_by_property_range(start = 1.311, 
                                          end = 1.313, 
                                          property = 'Density')
@@ -128,7 +128,7 @@ res_dt <- get_chemical_by_property_range(start = 1.311,
 
 `get_chem_info()` retrieves specific chemical information for an input chemical. This includes both experimental and predicted values by default, but providing "experimental" or "predicted" to the type parameter will return the specific associated information.
 
-```{r ccdR info chemical, message=FALSE, eval=FALSE}
+```{r ctxR info chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chem_info(DTXSID = 'DTXSID7020182')
 ```
 
@@ -136,7 +136,7 @@ res_dt <- get_chem_info(DTXSID = 'DTXSID7020182')
 
 `get_fate_by_dtxsid()` retrieves chemical fate data.
 
-```{r ccdR fate data chemical, message=FALSE, eval=FALSE}
+```{r ctxR fate data chemical, message=FALSE, eval=FALSE}
 res_dt <- get_fate_by_dtxsid(DTXSID = 'DTXSID7020182')
 ```
 
@@ -146,19 +146,19 @@ Chemicals can be searched using string values. Examples for each are provided by
 
 #### By starting value
 
-```{r ccdR starting value chemical, message=FALSE, eval=FALSE}
+```{r ctxR starting value chemical, message=FALSE, eval=FALSE}
 res_dt <- chemical_starts_with(word = 'DTXSID70201')
 ```
 
 #### By exact value
 
-```{r ccdR exact value chemical, message=FALSE, eval=FALSE}
+```{r ctxR exact value chemical, message=FALSE, eval=FALSE}
 res_dt <- chemical_equal(word = 'DTXSID7020182')
 ```
 
 #### By substring value
 
-```{r ccdR substring value chemical, message=FALSE, eval=FALSE}
+```{r ctxR substring value chemical, message=FALSE, eval=FALSE}
 res_dt <- chemical_contains(word = 'DTXSID702018')
 ```
 
@@ -168,20 +168,20 @@ MS-Ready data can be retrieved using a variety of input information. Examples fo
 
 ##### Mass Range
 
-```{r ccdR mass range ms ready chemical, message=FALSE, eval=FALSE}
+```{r ctxR mass range ms ready chemical, message=FALSE, eval=FALSE}
 res_dt <- get_msready_by_mass(start = 200.9, 
                               end = 200.95)
 ```
 
 ##### Chemical Formula
 
-```{r ccdR chemical formula ms ready chemical, message=FALSE, eval=FALSE}
+```{r ctxR chemical formula ms ready chemical, message=FALSE, eval=FALSE}
 res_dt <- get_msready_by_formula(formula = 'C16H24N2O5S')
 ```
 
 ##### DTXCID
 
-```{r ccdR dtxcid ms ready chemical, message=FALSE, eval=FALSE}
+```{r ctxR dtxcid ms ready chemical, message=FALSE, eval=FALSE}
 res_dt <- get_msready_by_dtxcid(DTXCID = 'DTXCID30182')
 ```
 
@@ -191,13 +191,13 @@ There are several lists of chemicals one can access. These can be filtered by th
 
 #### All lists by type
 
-```{r ccdR all list types chemical, message=FALSE, eval=FALSE}
+```{r ctxR all list types chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chemical_lists_by_type(type =  'federal')
 ```
 
 #### List by name
 
-```{r ccdR list by name chemical, message=FALSE, eval=FALSE}
+```{r ctxR list by name chemical, message=FALSE, eval=FALSE}
 res_dt <- get_public_chemical_list_by_name(listname = 'CCL4')
 ```
 
@@ -205,7 +205,7 @@ res_dt <- get_public_chemical_list_by_name(listname = 'CCL4')
 
 `get_lists_containing_chemical()` retrieves a list of names of chemical lists, each of which contains the specified chemical.
 
-```{r ccdR lists containing chemical, message=FALSE, eval=FALSE}
+```{r ctxR lists containing chemical, message=FALSE, eval=FALSE}
 res_dt <- get_lists_containing_chemical(DTXSID = 'DTXSID7020182')
 ```
 
@@ -213,7 +213,7 @@ res_dt <- get_lists_containing_chemical(DTXSID = 'DTXSID7020182')
 
 `get_chemicals_in_list()` retrieves the specific chemical information for each chemical contained in the specified list.
 
-```{r ccdR chemical in list chemical, message=FALSE, eval=FALSE}
+```{r ctxR chemical in list chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chemicals_in_list(list_name = 'CCL4')
 ```
 
@@ -225,7 +225,7 @@ There a mrv, mol, and image files that can be accessed using either the DTXSID o
 
 `get_chemical_mrv()` retrieves mrv file information for a chemical specified either by DTXSID or DTXCID.
 
-```{r ccdR mrv by dtxsid dtxcid chemical, message=FALSE, eval=FALSE}
+```{r ctxR mrv by dtxsid dtxcid chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chemical_mrv(DTXSID = 'DTXSID7020182')
 res_dt <- get_chemical_mrv(DTXCID = 'DTXCID30182')
 ```
@@ -234,7 +234,7 @@ res_dt <- get_chemical_mrv(DTXCID = 'DTXCID30182')
 
 `get_chemical_mol()` retrieves mol file information for a chemical specified either by DTXSID or DTXCID.
 
-```{r ccdR mol by dtxsid dtxcid chemical, message=FALSE, eval=FALSE}
+```{r ctxR mol by dtxsid dtxcid chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chemical_mol(DTXSID = 'DTXSID7020182')
 res_dt <- get_chemical_mol(DTXCID = 'DTXCID30182')
 ```
@@ -243,7 +243,7 @@ res_dt <- get_chemical_mol(DTXCID = 'DTXCID30182')
 
 `get_chemical_image()` retrieves image file information for a chemical specified either by DTXSID or DTXCID.
 
-```{r ccdR image by dtxsid dtxcid chemical, message=FALSE, eval=FALSE}
+```{r ctxR image by dtxsid dtxcid chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chemical_image(DTXSID = 'DTXSID7020182')
 res_dt <- get_chemical_image(DTXCID = 'DTXCID30182')
 ```
@@ -252,7 +252,7 @@ res_dt <- get_chemical_image(DTXCID = 'DTXCID30182')
 
 `get_chemical_synonym()` retrieves synonyms for the specified chemical.
 
-```{r ccdR synonym by dtxsid chemical, message=FALSE, eval=FALSE}
+```{r ctxR synonym by dtxsid chemical, message=FALSE, eval=FALSE}
 res_dt <- get_chemical_synonym(DTXSID = 'DTXSID7020182')
 ```
 
