--- a/vignettes/Hazard.Rmd
+++ b/vignettes/Hazard.Rmd
@@ -36,7 +36,7 @@ start_vignette("3")
 ```
 
 ```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
-if (!library(ccdR, logical.return = TRUE)){
+if (!library(ctxR, logical.return = TRUE)){
   devtools::load_all()
 }
 old_options <- options("width")
@@ -46,7 +46,7 @@ old_options <- options("width")
 # Redefining the knit_print method to truncate character values to 25 characters
 # in each column and to truncate the columns in the print call to prevent 
 # wrapping tables with several columns.
-#library(ccdR)
+#library(ctxR)
 knit_print.data.table = function(x, ...) {
   y <- data.table::copy(x)
   y <- y[, lapply(.SD, function(t){
@@ -70,7 +70,7 @@ In this vignette, [CTX Hazard API](https://api-ccte.epa.gov/docs/hazard.html) wi
 
 ::: {.noticebox data-latex=""}
 
-**NOTE:** Please see the introductory vignette for an overview of the *ccdR* package and initial set up instruction with API key storage.
+**NOTE:** Please see the introductory vignette for an overview of the *ctxR* package and initial set up instruction with API key storage.
 
 :::
 
@@ -82,7 +82,7 @@ More information on ToxValDB can be found at <https://www.epa.gov/comptox-tools/
 
 ## Functions
 
-Several ccdR functions are used to access the CTX Hazard API data.
+Several ctxR functions are used to access the CTX Hazard API data.
 
 ### Hazard Resource
 
@@ -90,7 +90,7 @@ Several ccdR functions are used to access the CTX Hazard API data.
 
 `get_hazard_by_dtxsid()` retrieves all hazard data, both human and EcoTox data.
 
-```{r ccdR all hazard, message=FALSE, eval=FALSE}
+```{r ctxR all hazard, message=FALSE, eval=FALSE}
 res_dt <- get_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 ```
 
@@ -98,7 +98,7 @@ res_dt <- get_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 
 `get_human_hazard_by_dtxsid()` retrieves only human hazard data.
 
-```{r ccdR human hazard, message=FALSE, eval=FALSE}
+```{r ctxR human hazard, message=FALSE, eval=FALSE}
 res_dt <- get_human_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 ```
 
@@ -106,7 +106,7 @@ res_dt <- get_human_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 
 `get_ecotox_hazard_by_dtxsid()` retrieves only ecological toxicity hazard data.
 
-```{r ccdR ecotox hazard, message=FALSE, eval=FALSE}
+```{r ctxR ecotox hazard, message=FALSE, eval=FALSE}
 res_dt <- get_ecotox_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 ```
 
@@ -114,7 +114,7 @@ res_dt <- get_ecotox_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 
 `get_skin_eye_hazard()` retrieves hazard data specific to skin and eye hazard.
 
-```{r ccdR skin and eye hazard, message=FALSE, eval=FALSE}
+```{r ctxR skin and eye hazard, message=FALSE, eval=FALSE}
 res_dt <- get_skin_eye_hazard(DTXSID = 'DTXSID7020182')
 ```
 
@@ -122,7 +122,7 @@ res_dt <- get_skin_eye_hazard(DTXSID = 'DTXSID7020182')
 
 `get_cancer_hazard()` retrieves cancer hazard data. 
 
-```{r ccdR cancer hazard, message=FALSE, eval=FALSE}
+```{r ctxR cancer hazard, message=FALSE, eval=FALSE}
 res_dt <- get_cancer_hazard(DTXSID = 'DTXSID7020182')
 ```
 
@@ -130,13 +130,13 @@ res_dt <- get_cancer_hazard(DTXSID = 'DTXSID7020182')
 
 `get_genetox_summary()` retrieves summary level data for genotoxicity data associated to a chemical.
 
-```{r ccdR genetox summary hazard, message=FALSE, eval=FALSE}
+```{r ctxR genetox summary hazard, message=FALSE, eval=FALSE}
 res_dt <- get_genetox_summary(DTXSID = 'DTXSID7020182')
 ```
 
 `get_genetox_detail()` retrieves more detailed genetox data for a chemical than is provided on the summary level.
 
-```{r ccdR genetox detail hazard, message=FALSE, eval=FALSE}
+```{r ctxR genetox detail hazard, message=FALSE, eval=FALSE}
 res_dt <- get_genetox_details(DTXSID = 'DTXSID7020182')
 ```
 
