--- a/vignettes/Bioactivity.Rmd
+++ b/vignettes/Bioactivity.Rmd
@@ -1,29 +1,16 @@
 ---
-title: "Bioactivity API"
-author: "Center for Computational Toxicology and Exposure"
+title: "ctxR: Bioactivity API"
+author: US EPA's Center for Computational Toxicology and Exposure ccte@epa.gov
 output:
-   prettydoc::html_pretty:
-    theme: architect
-    toc: yes
-    toc_depth: 5
+  rmdformats::readthedown
+params:
+  my_css: css/rmdformats.css
 vignette: >
   %\VignetteIndexEntry{3. Bioactivity}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-```{css, echo=FALSE}
-.scroll-200 {
-  max-height: 200px;
-  overflow-y: auto;
-}
-
-.noticebox {
-  padding: 1em;
-  background: lightgray;
-  color: blue;
-  border: 2px solid black;
-  border-radius: 10px;
-}
+```{css, code = readLines(params$my_css), hide=TRUE, echo = FALSE}
 ```
 
 ```{r, include = FALSE}
@@ -68,17 +55,11 @@ printFormattedTable <- function(res_dt, widen = c()) {
 }
 ```
 
+<a href="https://cran.r-project.org/web/packages/ctxR/index.html"><img src="Pictures/ctxR_hex.png" width="200" align="right" style="float: right; margin-left: 10px; margin-bottom: 20px;"/></a>
+
 # Introduction
 
-
 In this vignette, [CTX Bioactivity API](https://api-ccte.epa.gov/docs/bioactivity.html) will be explored. 
-
-
-::: {.noticebox data-latex=""}
-
-**NOTE:** Please see the introductory vignette for an overview of the *ctxR* package and initial set up instruction with API key storage.
-
-:::
 
 Data provided by the API's Bioactivity endpoints are sourced from ToxCast's invitrodb. 
 
@@ -94,33 +75,36 @@ This flexible analysis pipeline is capable of efficiently processing and storing
 
 </center>
 
+
+
 The Bioactivity API endpoints are organized into two different resources, "Assay" and "Data". "Assay" resource endpoints provide assay metadata for specific or all <font face="CMTT10"> invitrodb </font> 'aeids' (assay endpoint ids). These include annotations from <font face="CMTT10"> invitrodb</font>'s assay, assay_component, assay_component_endpoint, assay_list, assay_source, and gene tables, all returned in a by-aeid format.
 
 "Data" resource endpoints are split into summary data (by 'aeid') and bioactivity data by 'm4id' (i.e. both 'aeid' and 'spid'). The summary endpoint returns the number of active hits and total multi- and single-concentration chemicals tested for specific 'aeids'. The other endpoints return chemical information, level 3 concentration-response values, level 4 fit parameters, level 5 hit parameters, and level 6 flags for individual chemicals tested for given 'AEIDs', 'm4ids', 'SPIDs', or 'DTXSIDs'.
 
-Regular ToxCast/invitrodb users may find it easier to use [tcpl](https://CRAN.R-project.org/package=tcpl), which has integrated ctxR's bioactivity functions to make the API data retrievable in a familiar format. See the [tcpl](https://CRAN.R-project.org/package=tcpl) vignette regarding data retrieval via API for more information.
+Several ctxR functions can be used to access the CTX Bioactivity API data, as described in the following sections. Tables output in each example have been filtered to only display the first few rows of data. Regular ToxCast users may find it easier to use the [tcpl R Package](https://CRAN.R-project.org/package=tcpl), which is integrated ctxR's bioactivity functions to access API data in a more 'invitrodb'-like format. See the [tcpl's Data Retrieval via API](https://CRAN.R-project.org/package=tcpl) vignette for more guidance on data retrieval and plotting capabilities with tcpl.
 
-# Functions
+::: {.noticebox data-latex=""}
+**NOTE:** Please see the introductory vignette for an overview of the *ctxR* package and initial set up instruction with API key storage.
+:::
 
-
-Several ctxR functions are used to access the CTX Bioactivity API data.
-
-
-## Bioactivity Assay Resource
+# Bioactivity Assay Resource
 
 Specific assays may be searched as well as all available assays that have data using two different functions.
 
-### Get annotation by aeid
+## Get annotation by aeid
 
 `get_annotation_by_aeid()` retrieves annotation for a specific assay endpoint id (aeid).
-
 
 ```{r ctxR annotation by aeid, message=FALSE}
 assay <- get_annotation_by_aeid(AEID = "891")
 ```
 
 ```{r, echo=FALSE}
-printFormattedTable(assay, c(4, 18, 33, 51)) # printed using custom formatted table
+htmlTable::htmlTable(assay,
+        align = 'l',
+        align.header = 'l',
+        rnames = FALSE  ,
+        css.cell =  ' padding-bottom: 5px;  vertical-align:top; padding-right: 10px;min-width: 5em')
 ```
 
 `get_annotation_by_aeid_batch()` retrieves annotation for a list (or vector) of assay endpoint ids (aeids).
@@ -131,12 +115,15 @@ assays <- get_annotation_by_aeid_batch(AEID = c(759,700,891))
 assays <- data.table::rbindlist(assays)
 ```
 
-
-```{r ctxR-all-assays, message=FALSE, eval=FALSE}
-printFormattedTable(assays, c(4, 18, 19, 33, 51)) # printed using custom formatted table
+```{r, message=FALSE, eval=FALSE}
+htmlTable::htmlTable(assays),
+        align = 'l',
+        align.header = 'l',
+        rnames = FALSE  ,
+        css.cell =  ' padding-bottom: 5px;  vertical-align:top; padding-right: 10px;min-width: 5em')
 ```
 
-### Get all assay annotations
+## Get all assay annotations
 
 `get_all_assays()` retrieves all annotations for all assays available. 
 
@@ -144,39 +131,43 @@ printFormattedTable(assays, c(4, 18, 19, 33, 51)) # printed using custom formatt
 all_assays <- get_all_assays()
 ```
 
-## Bioactivity Data Resource
+# Bioactivity Data Resource
 
 There are several resources for retrieving bioactivity data associated with a variety of identifier types (e.g., DTXSID, aeid) that are available to the user. 
 
-### Get summary data
+## Get summary data
 
 `get_bioactivity_summary()` retrieves a summary of the number of active hits compared to the total number tested for both multiple and single concentration by aeid.
-
 
 ```{r ctxR summary by aeid, message=FALSE}
 summary <- get_bioactivity_summary(AEID = "891")
 ```
 
-```{r, echo=FALSE}
-printFormattedTable(summary) # printed using custom formatted table
-```
+```{r, message=FALSE, echo=FALSE}
+htmlTable::htmlTable(summary,
+        align = 'l',
+        align.header = 'l',
+        rnames = FALSE  ,
+        css.cell =  ' padding-bottom: 5px;  vertical-align:top; padding-right: 10px;min-width: 5em ')
+``` 
 
 `get_bioactivity_summary_batch()` retrieves a summary for a list (or vector) of assay endpoint ids (aeids).
 
-
 ```{r ctxR summary by aeid batch, message=FALSE}
 summary <- get_bioactivity_summary_batch(AEID = c(759,700,891))
-summary <- data.table::rbindlist(summary)
 ```
 
 ```{r, echo=FALSE}
-printFormattedTable(summary) # printed using custom formatted table
+htmlTable::htmlTable(summary,
+        align = 'l',
+        align.header = 'l',
+        rnames = FALSE  ,
+        css.cell =  ' padding-bottom: 5px;  vertical-align:top; padding-right: 10px;min-width: 5em')
 ```
 
-### Get data
+## Get data
 
 `get_bioactivity_details()` can retrieve all available multiple concentration data by assay endpoint id (aeid), sample id (spid), Level 4 ID (m4id), or chemical DTXSID. Returned is chemical information, level 3 concentration-response values, level 4 fit parameters, level 5 hit parameters, and level 6 flags for individual chemicals tested. An example for each request parameter is provided below:
-
 
 ```{r ctxR data by spid, message=FALSE, results = FALSE}
 # By spid
@@ -184,7 +175,11 @@ spid_data <- get_bioactivity_details(SPID = 'TP0000904H05')
 ```
 
 ```{r, echo=FALSE}
-printFormattedTable(head(spid_data), c(ncol(spid_data)-2)) # printed using custom formatted table
+htmlTable::htmlTable(spid_data,
+        align = 'l',
+        align.header = 'l',
+        rnames = FALSE  ,
+        css.cell =  ' padding-bottom: 5px;  vertical-align:top; padding-right: 10px;min-width: 5em')
 ```
 
 ```{r ctxR data by m4id, message=FALSE, results = FALSE}
@@ -193,9 +188,12 @@ m4id_data <- get_bioactivity_details(m4id = 739695)
 ```
 
 ```{r, echo=FALSE}
-printFormattedTable(m4id_data, c(ncol(m4id_data) - 2)) # printed using custom formatted table
+htmlTable::htmlTable(m4id_data,
+        align = 'l',
+        align.header = 'l',
+        rnames = FALSE  ,
+        css.cell =  ' padding-bottom: 5px;  vertical-align:top; padding-right: 10px;min-width: 5em')
 ```
-
 
 ```{r ctxR data by dtxsid, message=FALSE, results = FALSE}
 # By DTXSID
@@ -203,9 +201,12 @@ dtxsid_data <- get_bioactivity_details(DTXSID = "DTXSID30944145")
 ```
 
 ```{r, echo=FALSE}
-printFormattedTable(dtxsid_data, c(ncol(dtxsid_data)-2)) # printed using custom formatted table
+htmlTable::htmlTable(dtxsid_data,
+        align = 'l',
+        align.header = 'l',
+        rnames = FALSE  ,
+        css.cell =  ' padding-bottom: 5px;  vertical-align:top; padding-right: 10px;min-width: 5em')
 ```
-
 
 ```{r ctxR data by aeid, message=FALSE, results = FALSE}
 # By aeid
@@ -213,21 +214,22 @@ aeid_data <- get_bioactivity_details(AEID = 704)
 ```
 
 ```{r, echo=FALSE}
-printFormattedTable(head(aeid_data), c(ncol(aeid_data)-2)) # printed using custom formatted table
+htmlTable::htmlTable(head(aeid_data),
+        align = 'l',
+        align.header = 'l',
+        rnames = FALSE  ,
+        css.cell =  ' padding-bottom: 5px;  vertical-align:top; padding-right: 10px;min-width: 5em')
 ```
 
 Similar to the other `_batch` functions, `get_bioactivity_details_batch()` retrieves data for a list (or vector) of assay endpoint ids (aeid), sample ids (spid), Level 4 IDs (m4id), or chemical DTXSIDs.
 
 ```{r ctxR data by aeid batch, message=FALSE, eval=FALSE}
 aeid_data_batch <- get_bioactivity_details_batch(AEID = c(759,700,891))
-aeid_data_batch <- data.table::rbindlist(aeid_data_batch, fill = TRUE)
 ```
 
 # Conclusion
 
-
-In this vignette, a variety of functions that access different types of data found in the `Bioactivity` endpoints of the CTX APIs were listed. We encourage the reader to explore the data accessible through these endpoints work with it to get a better understanding of what data is available. Additionally, experienced ToxCast/invitrodb users may find it easier to continue to use [tcpl](https://CRAN.R-project.org/package=tcpl), which has integrated ctxR's bioactivity functions to make the API data retrievable in a familiar format.
-
+In this vignette, a variety of functions that access different types of data found in the `Bioactivity` endpoints of the CTX APIs were listed. Users are encouraged to explore the data accessible through these endpoints to get a better understanding of what data is available. Additionally, experienced ToxCast users may find it easier to use the [tcpl R package](https://CRAN.R-project.org/package=tcpl), since it has been integrated ctxR's bioactivity functions and will retrieve API data in a more familiar, 'invitrodb'-like format.
 
 ```{r breakdown, echo = FALSE, results = 'hide'}
 # This chunk will be hidden in the final product. It serves to undo defining the
