--- a/vignettes/Chemical.Rmd
+++ b/vignettes/Chemical.Rmd
@@ -2,7 +2,9 @@
 title: "ctxR: Chemical API"
 author: US EPA's Center for Computational Toxicology and Exposure ccte@epa.gov
 output:
-  rmdformats::readthedown
+  rmarkdown::html_vignette:
+    fig_width: 7
+    fig_height: 6
 params:
   my_css: css/rmdformats.css
 vignette: >
@@ -10,7 +12,6 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-
 ```{css, code = readLines(params$my_css), hide=TRUE, echo = FALSE}
 ```
 
