Added release and development version website urls.

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 
 # ctxR: Utilities for Interacting with the CTX APIs 
 
+Package website: [release](https://usepa.github.io/ctxR/) | [dev](https://usepa.github.io/ctxR/dev/)
+
 <!-- badges: start -->
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/ctxR)](https://cran.r-project.org/package=ctxR)
 [![Active](http://img.shields.io/badge/Status-Active-green.svg)](https://cran.r-project.org/package=ctxR) 
